<resources>
    <string name="app_name">Beaconear</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_applications">My Apps</string>
    <string name="title_activity_new_app">New application</string>
    <string name="title_activity_edit_app">Edit application</string>
    <string name="title_activity_app_manager">App management suite</string>
    <string name="title_activity_app_types">App types</string>
    <string name="title_activity_new_type">New type</string>
    <string name="title_activity_edit_type">Edit type</string>
    <string name="title_activity_registered_beacons">App beacons</string>
    <string name="title_activity_beacon_search">Scanning beacons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="inactive">Inactive</string>
    <string name="active">Active</string>

    <string name="new_app_congrats_message">Congrats! Your app -appName- was registered.</string>
    <string name="edited_app_congrats_message">Congrats! Your app -appName- was successfully modified.</string>

    <string name="new_type_congrats_message">Congrats! The type -typeName- was registered to -appName-.</string>
    <string name="edited_type_congrats_message">Congrats! The type -typeName- was successfully edited.</string>

    <string name="done">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="types_label">Types</string>
    <string name="beacons_label">Beacons</string>

    <string name="public_key_label">Public key:</string>
    <string name="public_key_hint">Use this key in your implementations of Beaconear SDK to receive data</string>

    <string name="private_key_label">Private key:</string>
    <string name="private_key_hint">Use this key in your implementations of Beaconear SDK to add and edit data</string>

    <string name="refresh_message">Refresh</string>
    <string name="app_icon_url_input_title">Url input</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">CANCEL</string>
    <string name="app_icon_hint">Tap to edit</string>
    <string name="title_activity_type_manager">TypeManagerActivity</string>
</resources>
